--- a/static/style.css
+++ b/static/style.css
@@ -11,8 +11,10 @@ body {
 
 /* Footer */
 footer {
-    background-color: #f1f1f1;
-    color: #333;
+    background-color: #f5f7fa;
+    color: #f7f9f9;
+    position: relative;
+    bottom: 0;
 }
 
 /* Card Styles */
