--- a/templates/register.html
+++ b/templates/register.html
@@ -34,7 +34,7 @@
     </div>
 </div>
  {% if error %}
- <div  class="floating-alert onload="setTimeout()" style=" background-color:red ; border-radius: 20px; padding: 5px;margin-top: 10px; margin-bottom: 10px">
+ <div  class="floating-alert onload="setTimeout()"">
 <p style="color: #f1ebeb; rgb(236, 242, 243);">{{ error }}</p>
 </div>
 {% endif %}
