--- a/static/style.css
+++ b/static/style.css
@@ -15,6 +15,7 @@ footer {
     color: #f7f9f9;
     position: relative;
     bottom: 0;
+    
 }
 
 /* Card Styles */
@@ -22,6 +23,7 @@ footer {
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease-in-out, background-color 0.3s ease-in-out;
+    max-width: 100%;
 }
 
 .card:hover {
@@ -33,4 +35,36 @@ footer {
 /* Buttons */
 .btn {
     border-radius: 5px;
+}
+ /* div Error  */
+ .floating-alert {
+    background-color:red ; 
+    border-radius: 20px; 
+    padding: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px"
+ }
+ .update-btn{
+    border-radius: 20px;
+    background-color: rgb(7, 37, 41);
+     color: whitesmoke;
+     padding: 5px;
+ }
+  /* row div card in index page */
+ .row{
+    margin-bottom: 60px;
+ }
+
+ .whatsapp-button {
+    display: inline-block;
+    padding: 10px 15px;
+    background-color: #25D366;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: background 0.3s ease;
+}
+.whatsapp-button:hover {
+    background-color: #1EBE5D;
 }
