--- a/static/style.css
+++ b/static/style.css
@@ -28,7 +28,7 @@ footer {
 
 .card:hover {
     transform: scale(1.05);
-    background-color: #96bfc1;  /* Brighter light green */
+    background-color: #d1ea93;  /* Brighter light green */
     border: 1px solid #2f663c;  /* Darker green border */
 }
 
