--- a/static/style.css
+++ b/static/style.css
@@ -28,21 +28,29 @@ footer {
 
 .card:hover {
     transform: scale(1.05);
-    background-color: #d1ea93;  /* Brighter light green */
+    background-color: #f4f8f8;  /* Brighter light green */
     border: 1px solid #2f663c;  /* Darker green border */
 }
-
+.card-img-top{
+    width: 50%;
+    height: 200px; /* Adjust based on your image size */
+    margin-left: 50%;
+    padding: 5px;
+    border-radius: 25%;
+    box-shadow: 0 4px 6px rgba(190, 240, 207, 0.1);
+    transition: transform 0.2s ease-in-out, background-color 0.3s ease-in
+}
 /* Buttons */
 .btn {
     border-radius: 5px;
 }
  /* div Error  */
  .floating-alert {
-    background-color:red ; 
+    background-color:rgb(243, 128, 128) ; 
     border-radius: 20px; 
     padding: 5px;
-    margin-top: 10px;
-    margin-bottom: 10px"
+    
+    margin-bottom: 5px"
  }
  .update-btn{
     border-radius: 20px;
