--- a/templates/index.html
+++ b/templates/index.html
@@ -12,18 +12,21 @@
                     <div class="card-body">
                         <h5 class="card-title">{{ product.name }}</h5>
                         <p class="card-text">Price: ${{ product.price }}</p>
+
                         {% if 'user' in session and session['role'] == 'user' %}
                             <a href="{{ url_for('buy_product', product_id=product._id) }}" class="btn btn-primary">Buy</a>
-                        {% endif %}
-                        {% if 'user' in session and session['role'] == 'admin' %}
+                        
+                        {% elif 'user' in session and session['role'] == 'admin' %}
                             <a href="{{ url_for('update_product', product_id=product._id) }}" class="btn btn-warning">Edit</a>
                             <a href="{{ url_for('delete_product', product_id=product._id) }}" class="btn btn-danger">Delete</a>
-                        {% endif %}
+                        
+                        {% else %}
                          <!-- WhatsApp Buy Button -->
-                    <a href="https://api.whatsapp.com/send?phone=212698815095&text=Je%20veux%20achete%20{{ product.name }}%20avec%20{{ product.price }}Dhs%20."
-                        target="_blank" class="whatsapp-button">
-                        Buy on WhatsApp
-                    </a>
+                            <a href="https://api.whatsapp.com/send?phone=212698815095&text=Je%20veux%20achete%20{{ product.name }}%20avec%20{{ product.price }}Dhs%20."
+                                target="_blank" class="whatsapp-button">
+                                Commonder
+                            </a>
+                         {% endif %}
                 </div>
             </div>
         </div>
