--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,12 @@
 {% block title %}Register - Milk Store{% endblock %}
 
 {% block content %}
-<div class="container">
+{% if error %}
+ <div  class="floating-alert onload="setTimeout()"">
+<p style="color: #f1ebeb; rgb(236, 242, 243);">{{ error }}</p>
+</div>
+{% endif %}
+<div class="container" style="margin-top: 10px;">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card shadow p-4">
@@ -33,11 +38,7 @@
         </div>
     </div>
 </div>
- {% if error %}
- <div  class="floating-alert onload="setTimeout()"">
-<p style="color: #f1ebeb; rgb(236, 242, 243);">{{ error }}</p>
-</div>
-{% endif %}
+ 
 <script>
     setTimeout(function() {
         let alert = document.querySelector(".floating-alert");
