--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -16,6 +16,10 @@
                     <div class="mb-3">
                         <label class="form-label">Price</label>
                         <input type="number" class="form-control" name="price" required>
+                        <label class="form-label">Description</label>
+                        <textarea rows = "5" cols = "50" name = "description" placeholder="Enter details here">
+                            
+                         </textarea>
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Product Image</label>
