--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,13 @@
         {% for product in products %}
             <div class="col-md-4">
                 <div class="card mb-4">
-                    <img src="{{ product.image }}" class="card-img-top" alt="Product Image">
                     <div class="card-body">
+                        <div class="image-container" >
+                            <img src="{{ product.image }}" style="display: inline;" class="card-img-top" alt="Product Image">
+                            <p> {{ product.description }}</p>
+                        </div>
                         <h5 class="card-title">{{ product.name }}</h5>
-                        <p class="card-text">Price: ${{ product.price }}</p>
+                        <p class="card-text">Price: {{ product.price }} Dhs</p>
 
                         {% if 'user' in session and session['role'] == 'user' %}
                             <a href="{{ url_for('buy_product', product_id=product._id) }}" class="btn btn-primary">Buy</a>
