--- a/static/style.css
+++ b/static/style.css
@@ -3,12 +3,23 @@ body {
     background-color: #f8f9fa;
     font-family: 'Arial', sans-serif;
 }
-
+.search{
+    width: 100%; 
+    padding: 10px; 
+    margin-bottom: 20px; 
+    border: 1px solid #ccc;
+     border-radius: 25px
+}
 /* Navbar */
 .navbar {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
-
+.logo {
+    margin-right: 5px;
+    border-radius: 50px;
+    display: block;
+    width: 3%;
+  }
 /* Footer */
 footer {
     background-color: #f5f7fa;
@@ -28,7 +39,7 @@ footer {
 
 .card:hover {
     transform: scale(1.05);
-    background-color: #f4f8f8;  /* Brighter light green */
+    background-color: #e8f5ec;  /* Brighter light green */
     border: 1px solid #2f663c;  /* Darker green border */
 }
 .card-img-top{
