--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Milk Store{% endblock %}</title>
+    <link rel="icon" class="logo" href="static/uploads/icon.png">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
@@ -16,7 +17,8 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('home') }}">🥛 Milk Store</a>
+            <img class="logo" src="/static/uploads/icon.png " alt="">
+            <a class="navbar-brand" href=" {{ url_for('home') }}"> Milk Store</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
