--- a/templates/update_product.html
+++ b/templates/update_product.html
@@ -15,11 +15,9 @@
                     <label for="price">Price:</label>
                     <input type="text" name="price" value="{{ product.price }}" required>
                     <label for="description" class="form-label">Description</label>
-                    <textarea name = "description" type="text" value="{{ product.description }}" rows = "5" cols = "50" " required>
-                        
-                     </textarea>
+                    <textarea id="description" name="description" placeholder="Enter product description..." rows="4" cols="37"></textarea><br>
                     <label>Current Image:</label>
-                    <img src="{{ url_for('static', filename=product.image.split('static/')[-1]) }}" alt="Product Image" width="150" style="border-radius: 20px;">
+                    <img src="{{ url_for('static', filename=product.image.split('static/')[-1]) }}" alt="Product Image" width="150" style="border-radius: 20px;"><br>
                 
                     <label for="image">Upload New Image:</label>
                     <input type="file" name="image" style="border-radius: 15px; background-color: beige;">
