--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
                     <div class="card-body">
                         <div class="image-container" >
                             <img src="{{ product.image }}" style="display: inline;" class="card-img-top" alt="Product Image">
-                            <p> {{ product.description }}</p>
+                            <h5> {{ product.description }}</h5>
                         </div>
                         <h5 class="card-title">{{ product.name }}</h5>
                         <p class="card-text">Price: {{ product.price }} Dhs</p>
