--- a/templates/layout.html
+++ b/templates/layout.html
@@ -28,6 +28,7 @@
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
                         {% if session['role'] == 'admin' %}
                             <li class="nav-item"><a class="nav-link" href="{{ url_for('add_product') }}">Add Product</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{{ url_for('manage_users') }}">Manage users</a></li>
                         {% endif %}
                     {% else %}
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
