--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,10 @@
 /* General Styling */
 body {
-    background-color: #f8f9fa;
+    background-color:rgb(254, 186, 23);
     font-family: 'Arial', sans-serif;
 }
 .search{
-    width: 100%; 
+    width: 40%; 
     padding: 10px; 
     margin-bottom: 20px; 
     border: 1px solid #ccc;
@@ -12,8 +12,17 @@ body {
     background-color: rgb(216, 216, 232);
     
 }
+/* On focus, expand to 100% */
+.search:focus {
+    width: 100%;
+    outline: none;
+}
 /* Navbar */
 .navbar {
+    padding-top: 1px;
+    border-radius: 0px 0px 30px 30px;
+    width: 100%;
+    overflow: hidden;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 .logo {
@@ -24,6 +33,7 @@ body {
   }
 /* Footer */
 footer {
+    border-radius: 30px 30px 0px 0px;
     background-color: #f5f7fa;
     color: #f7f9f9;
     position: relative;
@@ -37,7 +47,7 @@ footer {
     border-radius: 15px;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-    background: white;
+    background:white;
     overflow: hidden;
     border: 1px solid #e1e8ed;
 }
@@ -45,7 +55,7 @@ footer {
 .card:hover {
     transform: translateY(-5px);
     box-shadow: 0 10px 20px rgba(0, 128, 0, 0.3);
-    border-color: #2f663c;
+    border-color: whitesmoke;
     background-color: #f0fff4; /* Softer green on hover */
 }
 
@@ -150,7 +160,6 @@ footer {
  }
  .update-btn{
     border-radius: 20px;
-    background-color: rgb(7, 37, 41);
      color: whitesmoke;
      padding: 5px;
  }
@@ -159,7 +168,7 @@ footer {
     margin-bottom: 60px;
  }
 
- .whatsapp-button {
+ /* .whatsapp-button {
     display: inline-block;
     padding: 10px 15px;
     background-color: #25D366;
@@ -171,7 +180,7 @@ footer {
 }
 .whatsapp-button:hover {
     background-color: #1EBE5D;
-}
+} */
 
 /* dispalying img and descritpion on same line*/
 .image-container {
