--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Milk Store{% endblock %}</title>
-    <link rel="icon" class="logo" href="static/uploads/icon.png">
-
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='uploads/tube.png') }}">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     
@@ -17,8 +16,8 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <img class="logo" src="/static/uploads/icon.png " alt="">
-            <a class="navbar-brand" href=" {{ url_for('home') }}"> Milk Store</a>
+            <img class="logo" src="/static/uploads/tube.png " alt="">
+            <a class="navbar-brand" href=" {{ url_for('home') }}">FOREVER-© </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -26,13 +25,19 @@
                 <ul class="navbar-nav ms-auto">
                     {% if 'user' in session %}
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('send_email') }}">Email Us</a></li>
                         {% if session['role'] == 'admin' %}
                             <li class="nav-item"><a class="nav-link" href="{{ url_for('add_product') }}">Add Product</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{{ url_for('register') }}">Add user</a></li>
                             <li class="nav-item"><a class="nav-link" href="{{ url_for('manage_users') }}">Manage users</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{{ url_for('manage_costumers') }}"">Clients</a></li>
                         {% endif %}
                     {% else %}
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{{ url_for('register') }}">Register</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('send_email') }}">Email Us</a></li>
+                      
                     {% endif %}
                 </ul>
             </div>
@@ -46,11 +51,17 @@
 
     <!-- Footer -->
     <footer class="text-center p-3 bg-dark text-white fixed-bottom">
-        <p>© 2025 Milk Store. All rights reserved.</p>
+        <p>© 2025 KHALFI ALOEVERA. All rights reserved.</p>
     </footer>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
+    <!-- <script>
+            window.addEventListener("scroll", function() {
+            let scrollY = window.scrollY;
+            document.body.style.backgroundColor = `rgb(${132 - scrollY / 5}, ${176 - scrollY / 10}, ${103 - scrollY / 15})`;
+                });
+    </script> -->
 </body>
 </html>
