--- a/templates/login.html
+++ b/templates/login.html
@@ -19,7 +19,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Login</button>
                 </form>
-                <p class="text-center mt-3">Don't have an account? <a href="{{ url_for('register') }}">Register</a></p>
+                <p class="text-center mt-3">You need to have an account! <a href="{{ url_for('home') }}">Home</a></p>
             </div>
         </div>
     </div>
