requirements and pop up

--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}Add Product - Milk Store{% endblock %}
+{% block title %}Add Product - FOREVER-© {% endblock %}
 
 {% block content %}
 <div class="container">
