--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}Register - Milk Store{% endblock %}
+{% block title %}Register - FOREVER-©{% endblock %}
 
 {% block content %}
 {% if error %}
