--- a/templates/users.html
+++ b/templates/users.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}Home - Milk Store{% endblock %}
+{% block title %}Users - FOREVER-© {% endblock %}
 
 {% block content %}
         <h2 class="text-center mb-4">User Management</h2>
