--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta http-equiv="Cache-Control" content="no-store" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}FOREVER-©{% endblock %}</title>
@@ -17,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <img class="logo" src="/static/uploads/tube.png " alt="">
-            <a class="navbar-brand" href=" {{ url_for('home') }}">FOREVER-© </a>
+            <a class="navbar-brand" href=" {{ url_for('index') }}">FOREVER-© </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -57,12 +61,6 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
-    <!-- <script>
-            window.addEventListener("scroll", function() {
-            let scrollY = window.scrollY;
-            document.body.style.backgroundColor = `rgb(${132 - scrollY / 5}, ${176 - scrollY / 10}, ${103 - scrollY / 15})`;
-                });
-    </script> -->
 
     <script>
         let lastScrollTop = 0;
@@ -82,6 +80,5 @@
             lastScrollTop = scrollTop <= 0 ? 0 : scrollTop; // Avoid negative scroll
         });
     </script>
-    
 </body>
 </html>
