--- a/templates/personal_information.html
+++ b/templates/personal_information.html
@@ -7,6 +7,10 @@
     <h2 class="text-center">Personal Information</h2>
     <form action="{{ url_for('save_personal_info') }}" method="POST" class="mt-4">
         <div class="mb-3">
+            <label class="form-label">Quantity</label>
+            <input type="number" class="form-control" name="nb_order">
+        </div>
+        <div class="mb-3">
             <label for="full_name" class="form-label">Full Name</label>
             <input type="text" class="form-control" id="fullname" name="full_name" required>
         </div>
